[package]
name = "rebind"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]
description = """
A library for binding input keys to actions, and modifying mouse behaviour. Keys can be bound
to actions, and then translated during runtime.
"""
repository = "https://github.com/burtonageo/input-map"
readme = "./Readme.md"
keywords = ["Input mapping", "Rebind", "Mouse reverse"]
license = "MIT"
exclude = [
    "example/*",
    "rebind_plugins/*"
]

[dependencies]
itertools = "^0.3.0"
pistoncore-input = "^0.5.0"
pistoncore-window = "^0.9.0"
piston-viewport = "^0.1.0"
rustc-serialize = "0.3"

# Needed for doc comments
[dev-dependencies]
piston = "0.10.0"
pistoncore-glutin_window = "0.12"