[package]
name = "rebind"
version = "0.0.4"
authors = ["George Burton <burtonageo@gmail.com>"]
description = """
A library for binding input keys to actions, and modifying mouse behaviour. Keys can be bound
to actions, and then translated during runtime.
"""
repository = "https://github.com/burtonageo/input-map"
readme = "./Readme.md"
keywords = ["Input", "Rebind", "Mouse", "Mapping", "Keyboard"]
license = "MIT"
exclude = ["example/*", "rebind_plugins/*"]

[features]
default = []

[dependencies]
itertools = "^0.4"
pistoncore-input = "^0.8"
pistoncore-window = "^0.12"
piston-viewport = "^0.2"
rustc-serialize = "^0.3"

[dependencies.fnv]
version = "1.0.0"
optional = true

[dev-dependencies]
piston = "^0.13"
pistoncore-glutin_window = "^0.16"