[package]
name = "rebind_example"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]

[dependencies]
find_folder = "~0.2"
piston = "~0.10"
piston2d-graphics = "~0.9"
piston2d-opengl_graphics = "~0.12"
pistoncore-glutin_window = "~0.12"
piston-viewport = "~0.1"
conrod = "~0.14"

[dependencies.rebind_plugins]
path = "../rebind_plugins"
optional = true

[dependencies.rebind]
path = ".."

[features]
nightly = []