[package]
name = "rebind_example"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]

[dependencies]
find_folder = "~0.3"
piston = "~0.13"
piston2d-graphics = "~0.10"
piston2d-opengl_graphics = "~0.16"
pistoncore-glutin_window = "~0.16"
piston-viewport = "~0.2"
conrod = "~0.21"

[dependencies.rebind_plugins]
path = "../rebind_plugins"
optional = true

[dependencies.rebind]
path = ".."

[features]
default = []
nightly = ["rebind_plugins"]