[package]
name = "rebind_example"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]

[dependencies]
find_folder = "^0.3"
piston = "^0.16"
piston2d-graphics = "^0.11"
piston2d-opengl_graphics = "^0.19"
pistoncore-glutin_window = "^0.18"
piston-viewport = "~0.2"
conrod = "^0.22"

[dependencies.rebind_plugins]
path = "../rebind_plugins"
optional = true

[dependencies.rebind]
path = ".."

[features]
default = []
nightly = ["rebind_plugins"]