[package]
name = "rebind_example"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]

[dependencies]
find_folder = "^0.3"
piston = "^0.18"
piston_window = "0.37.0"
piston-viewport = "~0.2"
piston2d-graphics = "^0.11"
conrod = "^0.32"

[dependencies.rebind_plugins]
path = "../../rebind_plugins"
optional = true

[dependencies.rebind]
path = "../.."

[features]
default = []
nightly = ["rebind_plugins"]